<resources xmlns:tools="http://schemas.android.com/tools">

    <!--app name-->
    <string name="app_name">Bisimulazione</string>

    <!--login -->
    <string name="login_login_text_title">LOGIN</string>
    <string name="login_mail_address_text_header">Indirizzo mail</string>
    <string name="login_password_text_header">Password</string>
    <string name="login_remember_me_text">Ricordami</string>
    <string name="login_sign_in_text_button">ACCEDI</string>
    <string name="login_forgot_password_text_caption">Password dimenticata?</string>
    <string name="login_click_here_text_link">Clicca qui</string>
    <string name="login_bottom_sheet_mail_sent_to">Una mail con la nuova password è stata inviata all\'indirizzo </string>
    <string name="login_not_a_member_yet">Non sei ancora registrato?</string>
    <string name="login_not_a_member_yet_sign_up_here"><u>Registrati qui</u></string>
    <string name="login_username_input">prova@esempio.it</string>
    <string name="login_password_input">Inserisci qui la password…</string>

    <!-- sign up -->
    <string name="sign_up">Registrazione</string>
    <string name="sign_up_insert_name">Inserisci il tuo nome</string>
    <string name="sign_up_your_name_hint">Nome</string>
    <string name="sign_up_insert_surname">Inserisci il tuo cognome</string>
    <string name="sign_up_your_surname_hint">Cognome</string>
    <string name="sign_up_insert_mail">Inserisci il tuo indirizzo mail</string>
    <string name="sign_up_your_mail_hint">esempio@prova.it</string>
    <string name="sign_up_insert_username">Inserisci uno username</string>
    <string name="sign_up_your_username_hint">Username</string>
    <string name="sign_up_insert_pwd">Inserisci una password</string>
    <string name="sign_up_insert_confirm_pwd">Inserisci di nuovo la password</string>
    <string name="sign_up_button_text">REGISTRATI</string>
    <string name="sign_up_successful">Registrazione avvenuta con successo</string>
    <string name="sign_up_failed">Autenticazione fallita</string>
    <string name="sign_up_pwds_dont_match">Le password non corrispondono!</string>

    <!-- user-->
    <string name="user_unknown">sconosciuto</string>

    <!-- errors -->
    <string name="error_empty_edittext">Campo obbligatorio</string>
    <string name="error_too_short_edittext">Input troppo breve</string>

    <!-- success -->
    <string name="msg_create_user_success">Utente creato con successo</string>
    <string name="msg_data_send_success">Dati inviati con successo</string>

    <!-- bug report-->
    <string name="bug_report">Segnala un problema</string>
    <string name="bug_report_explanation_message">Mandaci un messaggio in cui riporti il problema che hai riscontrato:</string>
    <string name="bug_report_hint">Inserisci qui il testo</string>
    <string name="bug_report_send_message">Il messaggio verrà inviato a prova@mail.it\nGrazie per la segnalazione!</string>
    <string name="bug_report_send_button_text">INVIA</string>
    <string name="bug_report_msg_sent_successfully">Il messaggio è stato inviato correttamente!</string>

    <!-- navigation -->
    <string name="navigation_navigation">Navigazione</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_my_account">Il mio profilo</string>
    <string name="navigation_play_game">Gioca ora!</string>
    <string name="navigation_other">Altro</string>
    <string name="navigation_faq">FAQ</string>
    <string name="navigation_settings">Impostazioni</string>
    <string name="navigation_bug_report">Segnala un problema</string>

    <!-- navigation header -->
    <string name="navigation_header_description">Testata di navigazione</string>
    <string name="navigation_header_bisimulation_game_title">Bisimulazione</string>
    <string name="navigation_header_mail_subtitle">Benvenuto prova@mail.it!</string>

    <!-- home -->
    <string name="home_play_now">GIOCA ORA!</string>
    <string name="home_active_players">GIOCATORI ATTIVI</string>
    <string name="home_todo">TODO</string>

    <!-- home share -->
    <string name="home_share">Condividi</string>
    <string name="home_share_message">Fai sapere ai tuoi amici che stai giocando al gioco della bisimulazione!</string>
    <string name="home_share_with_your_friends">Condividi con i tuoi amici!</string>
    <string name="home_close">Chiudi</string>

    <!-- table -->
    <string name="table_table_right">Tavolo destro</string>
    <string name="table_table_left">Tavolo sinistro</string>
    <string name="table_special_colour">Il colore speciale è:</string>
    <string name="table_turn">E\' il turno di:</string>
    <string name="table_last_move_colour">Colore dell\'ultima mossa:</string>
    <string name="table_red">rosso</string>
    <string name="table_green">verde</string>
    <string name="table_black">nero</string>
    <string name="table_blue">blu</string>
    <string name="table_attacker">attaccante</string>
    <string name="table_defender">difensore</string>
    <string name="table_attacker_is">L\'attaccante è:</string>
    <string name="table_defender_is">Il difensore è:</string>
    <string name="table_possible_moves">Ci sono ancora mosse disponibili.</string>
    <string name="table_invalid_move_attacker">MOSSA NON CONSENTITA PER L\'ATTACCANTE</string>
    <string name="table_invalid_move_defender">MOSSA NON CONSENTITA PER IL DIFENSORE</string>
    <string name="table_cycle">cycle</string>
    <string name="table_configuration_already_visited">CONFIGURAZIONE GIA\' VISITATA</string>
    <string name="table_no_move_text">STAI FERMO</string>
    <string name="table_no_move_btn_text">SE NODO DI PARTENZA E DI ARRIVO COINCIDONO O VUOI RIMANERE
        FERMO, CLICCA SUL PULSANTE \"STAI FERMO\".</string>
    <string name="table_your_turn">IL TUO TURNO</string>

    <!-- matchmaking room -->
    <string name="matchmaking_room">Stanza pre-partita</string>
    <string name="matchmaking_room_create_room_text">CREA STANZA</string>
    <string name="matchmaking_room_player_unknown_text">Sconosciuto</string>
    <string name="matchmaking_room_creating_room_text">CREANDO LA STANZA…</string>
    <string name="matchmaking_room_error_text">ERRORE</string>
    <string name="matchmaking_room_property">Stanza di</string>
    <string name="matchmaking_room_attacker">attaccante</string>
    <string name="matchmaking_room_defender">difensore</string>

    <!-- bottom sheet reset pwd -->
    <string name="bottom_sheet_reset_pwd_insert_mail">Inserisci il tuo indirizzo mail usato durante la registrazione:</string>
    <string name="bottom_sheet_reset_pwd_insert_mail_here">Inserisci il tuo indirizzo mail qui…</string>
    <string name="bottom_sheet_reset_pwd_reset">RESET</string>
    <string name="bottom_sheet_reset_pwd_text">Reset password</string>

    <!-- directed graph -->
    <string name="directed_graph_attacker">attaccante</string>
    <string name="directed_graph_defender">difensore</string>

    <!-- navigation -->
    <string name="navigation_drawer_open">apri</string>
    <string name="navigation_drawer_close">chiudi</string>

    <!-- menu -->
    <string name="menu_home">Home</string>
    <string name="menu_bug_report">Segnala un problema</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_play_game">Gioca ora</string>
    <string name="menu_settings">Impostazioni</string>

    <!-- FAQ -->
    <string name="faq">FAQ</string>
    <string name="faq_toggle_question">Apri / Chiudi</string>
    <string name="faq_question_one">Cosa si intende per <b>bisimulazione</b>?</string>
    <string name="faq_answer_one">Nel campo dell\'informatica teorica la <b>bisimulazione</b> è una relazione
        binaria tra sistemi a transizione di stati, che associa due sistemi quando si comportano allo stesso modo,
        quando cioè un sistema simula l\'altro e viceversa.</string>
    <string name="faq_question_two">Quando due sistemi possono essere considerati <b>bisimilari</b>?</string>
    <string name="faq_answer_two">Due sistemi sono <b>bisimilari</b> se le transizioni di uno possono
        essere ordinatamente mimate dall\'altro, ed è in questo senso che si dice che un osservatore
        non è in grado di distinguerli.</string>
    <string name="faq_question_three">Dove vengono salvati i miei <b>dati</b>?</string>
    <string name="faq_answer_three">I dati sono conservati all\'interno di <b>Firebase</b>, un servizio
        offerto da <i>Google</i>, dove i dati sono <b><i>criptati</i></b>.</string>
    <string name="faq_question_four" tools:ignore="Typos">Quanti <b>tavoli da gioco</b> sono disponibili
        al momento?</string>
    <string name="faq_answer_four" tools:ignore="Typos">Al momento è disponibile un solo tavolo da gioco.
        Presto saranno disponibili altri.</string>

    <!-- settings -->
    <string name="settings">Impostazioni</string>
    <string name="settings_language">Scegli la lingua</string>

    <!-- language -->
    <string name="language_italian">Italiano</string>
    <string name="language_english">Inglese</string>
    <string name="language_select">Seleziona lingua…</string>

    <!-- alert end game -->
    <string name="alert_end_game">PARTITA TERMINATA</string>
    <string name="alert_end_game_winner">CONGRATULAZIONI! HAI VINTO!</string>
    <string name="alert_end_game_loser">PER QUESTA VOLTA HAI PERSO.</string>
    <string name="alert_continue">CONTINUA</string>

    <!-- navigation header -->
    <string name="navigation_header_content_description">TODO</string>
    <string name="navigation_header_user_name">Nome completo</string>
    <string name="navigation_header_user_mail">android@studio.it</string>

    <!-- my account -->
    <string name="my_account">Il mio profilo</string>
    <string name="my_account_unknown">Sconosciuto</string>
    <string name="my_account_personal_info">INFORMAZIONI PERSONALI</string>
    <string name="my_account_first_name">Nome</string>
    <string name="my_account_last_name">Cognome</string>
    <string name="my_account_email">Indrizzo mail</string>
    <string name="my_account_stats">STATISTICHE</string>
    <string name="my_account_win_count">Numero di vittorie:</string>
    <string name="my_account_lose_count">Numero di sconfitte:</string>

    <!-- first card -->
    <string name="first_card_personal_stats">STATISTICHE PERSONALI</string>
    <string name="first_card_more_about">SCOPRI DI PIU</string>
    <string name="first_card_win">Numero di vittorie:</string>
    <string name="first_card_zero">0</string>
    <string name="first_card_lose">Numero di sconfitte:</string>

    <!-- second card -->
    <string name="second_card_active_players">GIOCATORI ATTIVI</string>
    <string name="second_card_active_players_count">Giocatori attivi:</string>
    <string name="second_card_zero">0</string>
    <string name="second_card_rooms_count">Stanze:</string>

    <!-- active players -->
    <string name="active_players">Giocatori attivi</string>

    <!-- nodes -->
    <string name="node_one">Node one</string>
    <string name="node_two">Node two</string>
    <string name="node_three">Node three</string>
    <string name="node_four">Node four</string>
    <string name="node_five">Node five</string>
</resources>