<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/navigation_navigation">
        <menu>
            <group
                android:id="@+id/navigation_top"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/navigation_home"
                    android:title="@string/navigation_home" />
                <item
                    android:id="@+id/navigation_my_account"
                    android:title="@string/navigation_my_account" />
                <item
                    android:id="@+id/navigation_game"
                    android:title="@string/navigation_play_game" />
            </group>
        </menu>
    </item>

    <item android:title="@string/navigation_other">
        <menu>
            <group
                android:id="@+id/navigation_bottom"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/navigation_faq"
                    android:title="@string/navigation_faq" />
                <item
                    android:id="@+id/navigation_settings"
                    android:title="@string/navigation_settings" />
                <item
                    android:id="@+id/navigation_bug_report"
                    android:title="@string/navigation_bug_report" />
            </group>
        </menu>
    </item>
</menu>