<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">

    <LinearLayout
        android:id="@+id/sign_up_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_up_insert_name_text"
            style="@style/Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_insert_name" />

        <EditText
            android:id="@+id/sign_up_name_input"
            style="@style/H6"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@drawable/edittext"
            android:gravity="center_vertical"
            android:hint="@string/sign_up_your_name_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_up_surname_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_up_insert_surname_text"
            style="@style/Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_insert_surname" />

        <EditText
            android:id="@+id/sign_up_surname_input"
            style="@style/H6"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@drawable/edittext"
            android:gravity="center_vertical"
            android:hint="@string/sign_up_your_surname_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_up_mail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_up_insert_mail_text"
            style="@style/Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_insert_mail" />

        <EditText
            android:id="@+id/sign_up_mail_input"
            style="@style/H6"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@drawable/edittext"
            android:gravity="center_vertical"
            android:hint="@string/sign_up_your_mail_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_up_username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_up_insert_username_text"
            style="@style/Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_insert_username" />

        <EditText
            android:id="@+id/sign_up_username_input"
            style="@style/H6"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@drawable/edittext"
            android:gravity="center_vertical"
            android:hint="@string/sign_up_your_username_hint"
            android:importantForAutofill="no"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_up_pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_up_insert_pwd_text"
            style="@style/Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_insert_pwd" />

        <EditText
            android:id="@+id/sign_up_pwd_input"
            style="@style/H6"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@drawable/edittext"
            android:gravity="center_vertical"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_up_confirm_pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_up_insert_confirm_pwd_text"
            style="@style/Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_insert_confirm_pwd" />

        <EditText
            android:id="@+id/sign_up_confirm_pwd_input"
            style="@style/H6"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@drawable/edittext"
            android:gravity="center_vertical"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/sign_up_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/sign_up_sign_up_button"
            style="@style/BUTTON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/button"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_up_button_text"
            android:textColor="@color/white" />
    </RelativeLayout>
</LinearLayout>