<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:id="@+id/login_login_text_title"
        style="@style/H3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/login_login_text_title"
        android:textColor="@color/primaryColor" />

    <LinearLayout
        android:id="@+id/login_username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_mail_address_text_header"
            style="@style/Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_mail_address_text_header" />

        <EditText
            android:id="@+id/login_username_input"
            style="@style/H6"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext"
            android:gravity="center_vertical"
            android:hint="@string/login_username_input"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingVertical="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_password_text_header"
            style="@style/Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_password_text_header" />

        <EditText
            android:id="@+id/login_password_input"
            style="@style/H6"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext"
            android:gravity="center_vertical"
            android:hint="@string/login_password_input"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingVertical="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/login_remember_me_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:id="@+id/login_remember_me_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/login_remember_me_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/grey"
                android:checked="false"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/login_remember_me_caption_text"
                style="@style/Caption"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/login_remember_me_text" />
        </LinearLayout>

        <Button
            android:id="@+id/login_sign_in_button"
            style="@style/BUTTON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/button"
            android:text="@string/login_sign_in_text_button"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_forgot_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_forgot_password_text"
            style="@style/Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_forgot_password_text_caption" />

        <TextView
            android:id="@+id/login_click_here_link"
            style="@style/Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:gravity="center"
            android:text="@string/login_click_here_text_link"
            android:textColor="@color/link" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/login_not_a_member_yet_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:id="@+id/login_not_a_member_yet_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/login_not_a_member_yet_inner_linear_layout_separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/login_not_a_member_yet_question"
                    style="@style/Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/login_not_a_member_yet" />

                <TextView
                    android:id="@+id/login_not_a_member_yet_sign_up_here"
                    style="@style/Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/login_not_a_member_yet_sign_up_here"
                    android:textColor="@color/link" />
            </LinearLayout>

            <View
                android:id="@+id/login_not_a_member_yet_separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>