<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BugReport">

    <TextView
        android:id="@+id/bug_report_message"
        style="@style/Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/bug_report_explanation_message" />

    <EditText
        android:id="@+id/bug_report_body_mail"
        style="@style/Body1"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/corner_radius_edittext"
        android:gravity="top"
        android:hint="@string/bug_report_hint"
        android:inputType="textMultiLine"
        android:padding="8dp" />

    <RelativeLayout
        android:id="@+id/bug_report_send_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/bug_report_send_message"
            style="@style/Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/bug_report_send_message" />

        <Button
            android:id="@+id/bug_report_send_button"
            style="@style/BUTTON"
            android:layout_width="52dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/corner_radius_button"
            android:text="@string/bug_report_send_button_text"
            android:textColor="@color/background_color"
            android:visibility="visible" />
    </RelativeLayout>
</LinearLayout>